Updated the tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,12 @@
 # Set colours to 24 bit colour
 set-option -sa terminal-overrides ",xterm*:Tc"
+
 # Show visual indicator when prefix is pressed
 set -g status-right '#{?client_prefix,#[reverse]<Prefix>#[noreverse] ,}'
+
 # Allow mouse scrolling and mouse click between windows
 set -g mouse on
+
 # In MS. How long you have to chain ESC to some other key - Makes ESC feel better in nvim if lower!
 set -sg escape-time 2 
 
@@ -21,12 +24,19 @@ set -g status-position bottom
 setw -g window-status-format ' #[fg=magenta,bg=default]#I #[fg=white,bg=default]#W '
 setw -g window-status-current-format ' #[fg=magenta,bg=default]#I #[fg=green,bg=default]#W '
 
+# Move panes with CTRL-Arrow keys 
+bind -n C-Left select-pane -L
+bind -n C-Right select-pane -R
+bind -n C-Up select-pane -U
+bind -n C-Down select-pane -D
+
 # Allow nvim like controls to enter the copy/visual select mode
 setw -g mode-keys vi
 
 # Numbering
 set -g base-index 1
 setw -g pane-base-index 1
+
 # Renumbers the windows when one is deleted so that you don't need to detatch then re-attach to fix it
 set-option -g renumber-windows on
 
