--- a/tmux.conf
+++ b/tmux.conf
@@ -27,8 +27,17 @@ setw -g window-status-current-format ' #[fg=magenta,bg=default]#I #[fg=green,bg=
 # Move panes with CTRL-Arrow keys 
 bind -n C-Left select-pane -L
 bind -n C-Right select-pane -R
-bind -n C-Up select-pane -U
-bind -n C-Down select-pane -D
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Smart pane switching with awareness of Vim splits
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
+bind -n C-Left if-shell "$is_vim" "send-keys C-Left"  "select-pane -L"
+bind -n C-Down if-shell "$is_vim" "send-keys C-Down"  "select-pane -D"
+bind -n C-Up if-shell "$is_vim" "send-keys C-Up"  "select-pane -U"
+bind -n C-Right if-shell "$is_vim" "send-keys C-Right"  "select-pane -R"
 
 # Allow nvim like controls to enter the copy/visual select mode
 setw -g mode-keys vi
