--- a/tmux.conf
+++ b/tmux.conf
@@ -42,6 +42,11 @@ bind -n C-Right if-shell "$is_vim" "send-keys C-Right"  "select-pane -R"
 # Allow nvim like controls to enter the copy/visual select mode
 setw -g mode-keys vi
 
+# Enable clipboard 
+set -g set-clipboard on
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
+
 # Numbering
 set -g base-index 1
 setw -g pane-base-index 1
