Edited the tmux config to allow for the same keybind to resize both tmux panes and nvim windows. Also updated the telescope plugin.

--- a/tmux.conf
+++ b/tmux.conf
@@ -24,15 +24,22 @@ set -g status-position bottom
 setw -g window-status-format ' #[fg=magenta,bg=default]#I #[fg=white,bg=default]#W '
 setw -g window-status-current-format ' #[fg=magenta,bg=default]#I #[fg=green,bg=default]#W '
 
+# Smart pane switching with awareness of Vim splits
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+        | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
 # Move panes with CTRL-Arrow keys 
 bind -n C-Left select-pane -L
 bind -n C-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# Smart pane switching with awareness of Vim splits
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+# Resize pane as long as not in nvim - FIX THESE LINES
+bind -n M-Left if-shell "$is_vim" "send-keys M-Left" "resize-pane -L 5"
+bind -n M-Right if-shell "$is_vim" "send-keys M-Right" "resize-pane -R 5"
+bind -n M-Up if-shell "$is_vim" "send-keys M-Up" "resize-pane -U 5"
+bind -n M-Down if-shell "$is_vim" "send-keys M-Down" "resize-pane -D 5"
+
 
 bind -n C-Left if-shell "$is_vim" "send-keys C-Left"  "select-pane -L"
 bind -n C-Down if-shell "$is_vim" "send-keys C-Down"  "select-pane -D"
