--- a/tmux.conf
+++ b/tmux.conf
@@ -35,16 +35,16 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 # Resize pane as long as not in nvim - FIX THESE LINES
-bind -n M-Left if-shell "$is_vim" "send-keys M-Left" "resize-pane -L 5"
-bind -n M-Right if-shell "$is_vim" "send-keys M-Right" "resize-pane -R 5"
-bind -n M-Up if-shell "$is_vim" "send-keys M-Up" "resize-pane -U 5"
-bind -n M-Down if-shell "$is_vim" "send-keys M-Down" "resize-pane -D 5"
+bind -n M-h if-shell "$is_vim" "send-keys M-Left" "resize-pane -L 5"
+bind -n M-l if-shell "$is_vim" "send-keys M-Right" "resize-pane -R 5"
+bind -n M-k if-shell "$is_vim" "send-keys M-Up" "resize-pane -U 5"
+bind -n M-j if-shell "$is_vim" "send-keys M-Down" "resize-pane -D 5"
 
 
-bind -n C-Left if-shell "$is_vim" "send-keys C-Left"  "select-pane -L"
-bind -n C-Down if-shell "$is_vim" "send-keys C-Down"  "select-pane -D"
-bind -n C-Up if-shell "$is_vim" "send-keys C-Up"  "select-pane -U"
-bind -n C-Right if-shell "$is_vim" "send-keys C-Right"  "select-pane -R"
+bind -n C-h if-shell "$is_vim" "send-keys C-Left"  "select-pane -L"
+bind -n C-l if-shell "$is_vim" "send-keys C-Right"  "select-pane -R"
+bind -n C-k if-shell "$is_vim" "send-keys C-Up"  "select-pane -U"
+bind -n C-j if-shell "$is_vim" "send-keys C-Down"  "select-pane -D"
 
 # Allow nvim like controls to enter the copy/visual select mode
 setw -g mode-keys vi
