Added keybinds for renaming the session and windows easily

--- a/tmux.conf
+++ b/tmux.conf
@@ -72,3 +72,8 @@ run '~/.tmux/plugins/tpm/tpm'
 # Add binding to reload tmux.conf for fast, iterative development
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 
+# Add a binding for rename window
+bind-key t command-prompt -I "#W" "rename-window '%%'"
+
+# Add a binding for rename session
+bind-key T command-prompt -I "#S" "rename-session '%%'"
