Edited the kitty config to not rely on the darker brown color scheme. This should be better on the VM's

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,82 +1,132 @@
-# Font settings
-font_family      Iosevka NF
-font_size        11.0
-italic_font      auto
+# Modern Kitty Terminal Configuration
+# Save this as ~/.config/kitty/kitty.conf
+
+# Font Configuration
+font_family      VictorMono Nerd Font
 bold_font        auto
+italic_font      auto
 bold_italic_font auto
+font_size        12.0
 
-# Cursor settings
-cursor           #8fee96
-cursor_text_color #2f2f2f
-cursor_shape     block
+# Transparency & Window
+background_opacity 0.85
+dynamic_background_opacity yes
+background_blur 20
+
+# Window Layout
+remember_window_size  yes
+initial_window_width  1200
+initial_window_height 800
+window_padding_width  12
+window_margin_width   0
+single_window_margin_width -1
+
+# Tab Bar
+tab_bar_edge bottom
+tab_bar_style powerline
+tab_powerline_style slanted
+tab_title_template {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
+
+# Color Scheme - Modern Dark with Transparency
+foreground #e1e3e4
+background #0d1117
+selection_foreground #0d1117
+selection_background #58a6ff
+
+# Cursor
+cursor #58a6ff
+cursor_text_color background
+cursor_shape block
 cursor_blink_interval 0.5
-cursor_stop_blinking_after 0
+cursor_stop_blinking_after 15.0
 
-# Window settings
-# initial_window_width  180c
-# initial_window_height 50c
-# window_padding_width 15
-background_opacity 0.9
-# hide_window_decorations yes
-start_as window
+# URL styling
+url_color #73daca
+url_style curly
 
-# Scrollback
-scrollback_lines 2000
-wheel_scroll_multiplier 5.0
-touch_scroll_multiplier 5.0
-
-# Mouse
-mouse_hide_wait 1.0
-
-# Colors
-foreground       #c0b18b
-background       #262626
-
-# Normal colors
-color0           #2f2f2f
-color1           #d75f5f
-color2           #d4d232
-color3           #af865a
-color4           #22c3a1
-color5           #775759
-color6           #84edb9
-color7           #c0b18b
-
-# Bright colors
-color8           #656565
-color9           #d75f5f
-color10          #8fee96
-color11          #cd950c
-color12          #22c3a1
-color13          #775759
-color14          #84edb9
-color15          #d8d8d8
-
-# Selection
-selection_foreground #2f2f2f
-selection_background #d75f5f
-
-# Key bindings
-map ctrl+shift+v paste_from_clipboard
-map ctrl+shift+c copy_to_clipboard
-map shift+insert paste_from_selection
-map ctrl+shift+page_up scroll_page_up
-map ctrl+shift+page_down scroll_page_down
-map ctrl+shift+home scroll_home
-map ctrl+shift+end scroll_end
-map ctrl+shift+t new_os_window
-map ctrl+shift+w close_window
-map ctrl+equal change_font_size all +1.0
-map ctrl+minus change_font_size all -1.0
-map ctrl+0 change_font_size all 0
-
-# Disable bell sound
+# Terminal bell
 enable_audio_bell no
 visual_bell_duration 0.0
-window_alert_on_bell no
-bell_on_tab no
 
-# Background image - replace with your image path
-background_image /home/sam/Pictures/github_coding_images/owlsr.jpg
-background_image_layout scaled
-background_tint 0.8
+# Window border
+draw_minimal_borders yes
+window_border_width 1pt
+active_border_color #58a6ff
+inactive_border_color #30363d
+
+# Color palette
+# Black
+color0 #484f58
+color8 #6e7681
+
+# Red
+color1 #ff7b72
+color9 #ffa198
+
+# Green
+color2  #3fb950
+color10 #56d364
+
+# Yellow
+color3  #d29922
+color11 #e3b341
+
+# Blue
+color4  #58a6ff
+color12 #79c0ff
+
+# Magenta
+color5  #bc8cff
+color13 #d2a8ff
+
+# Cyan
+color6  #39c5cf
+color14 #56d4dd
+
+# White
+color7  #b1bac4
+color15 #f0f6fc
+
+# Performance
+repaint_delay 10
+input_delay 3
+sync_to_monitor yes
+
+# Mouse
+mouse_hide_wait 3.0
+url_prefixes http https file ftp gemini irc gopher mailto news git
+detect_urls yes
+copy_on_select yes
+strip_trailing_spaces never
+
+# Keyboard shortcuts
+map ctrl+shift+c copy_to_clipboard
+map ctrl+shift+v paste_from_clipboard
+map ctrl+shift+equal change_font_size all +2.0
+map ctrl+shift+minus change_font_size all -2.0
+map ctrl+shift+backspace change_font_size all 0
+
+# Tab management
+map ctrl+shift+t new_tab
+map ctrl+shift+w close_tab
+map ctrl+shift+right next_tab
+map ctrl+shift+left previous_tab
+
+# Window management
+map ctrl+shift+enter new_window
+map ctrl+shift+n new_os_window
+
+# Background opacity controls
+map ctrl+shift+a>m set_background_opacity +0.1
+map ctrl+shift+a>l set_background_opacity -0.1
+map ctrl+shift+a>1 set_background_opacity 1
+map ctrl+shift+a>d set_background_opacity default
+
+# Allow remote control
+allow_remote_control yes
+
+# Shell integration
+shell_integration enabled
+
+# Update check
+update_check_interval 0
