--- a/other_configs/hyprland/hypr/hyprland.conf
+++ b/other_configs/hyprland/hypr/hyprland.conf
@@ -224,7 +224,8 @@ device {
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
+# $mainMod = SUPER # Sets "Windows" key as main modifier
+$mainMod = ALT # Sets "Alt" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, M, exit,
