--- a/other_configs/hyprland/hypr/hyprland.conf
+++ b/other_configs/hyprland/hypr/hyprland.conf
@@ -231,7 +231,7 @@ $mainMod = ALT # Sets "Alt" key as main modifier
 bind = $mainMod, M, exit,
 bind = $mainMod, Q, killactive
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, G, togglefloating,
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
@@ -320,10 +320,10 @@ windowrule = suppressevent maximize, class:.*
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 # Terminal
-bind = SUPER, Return, exec, kitty
+bind = $mainMod, Return, exec, kitty
 
 #App Launcher
-bind = SUPER, D, exec, wofi --show drun
+bind = $mainMod, D, exec, wofi --show drun
 
 # Map monitor and workspaces
 workspace = 1, monitor:HDMI-A-2
