Replaced rofi/wofi on hyprland with ulauncher... Has vim mode, dark mode and looks a little nicer

--- a/other_configs/hyprland/hypr/hyprland.conf
+++ b/other_configs/hyprland/hypr/hyprland.conf
@@ -33,8 +33,8 @@ monitor = DP-1, 1920x1080, 4480x0, 1
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
-
+# $menu = wofi --show drun
+$menu = ulauncher
 
 #################
 ### AUTOSTART ###
