Added option to full screen a single pane in tmux

--- a/other_configs/tmux/tmux.conf
+++ b/other_configs/tmux/tmux.conf
@@ -101,3 +101,5 @@ bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 bind-key t command-prompt -I "#W" "rename-window '%%'"
 # Add a binding for rename session
 bind-key T command-prompt -I "#S" "rename-session '%%'"
+# Add full screening of single pane 
+bind-key z resize-pane -Z
