Updated the tmux config to use a better colour scheme in the command prompt area

--- a/other_configs/tmux/tmux.conf
+++ b/other_configs/tmux/tmux.conf
@@ -17,6 +17,9 @@ set -g status-position bottom
 # Window status style
 setw -g window-status-format ' #[fg=magenta,bg=default]#I #[fg=white,bg=default]#W '
 setw -g window-status-current-format ' #[fg=magenta,bg=default]#I #[fg=green,bg=default]#W '
+# Command prompt styling
+set -g message-style "fg=#f0f6fc,bg=#21262d"
+set -g message-command-style "fg=#f0f6fc,bg=#21262d"
 # Smart pane switching with awareness of Vim splits
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
         | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
