Removed unused old tmux config and udpated existing one with swap windows keybind

--- a/other_configs/tmux/tmux.conf
+++ b/other_configs/tmux/tmux.conf
@@ -106,3 +106,5 @@ bind-key t command-prompt -I "#W" "rename-window '%%'"
 bind-key T command-prompt -I "#S" "rename-session '%%'"
 # Add full screening of single pane 
 bind-key z resize-pane -Z
+# Add binding to swap current window with target window
+bind-key s command-prompt -p "swap with window:" "swap-window -t '%%'"
