--- a/other_configs/hyprland/hypr/hyprland.conf
+++ b/other_configs/hyprland/hypr/hyprland.conf
@@ -19,9 +19,9 @@ monitor=,preferred,auto,auto
 # Left monitor (1080p HDMI)
 monitor = HDMI-A-2, 1920x1080, 0x0, 1
 # Middle monitor (4K at 150% scale) - starts after left monitor
-monitor = DP-2, 3840x2160, 1920x0, 1.5
+monitor = DP-1, 3840x2160, 1920x0, 1.5
 # Right monitor (1080p DP) - starts after middle monitor's effective width
-monitor = DP-1, 1920x1080, 4480x0, 1
+monitor = DP-2, 1920x1080, 4480x0, 1
 
 
 ###################
@@ -31,10 +31,12 @@ monitor = DP-1, 1920x1080, 4480x0, 1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+# $terminal = kitty
+$terminal = alacritty
 $fileManager = dolphin
 # $menu = wofi --show drun
 $menu = ulauncher
+
 
 #################
 ### AUTOSTART ###
@@ -197,6 +199,9 @@ input {
     kb_options =
     kb_rules =
 
+    repeat_rate = 50    # 50Hz = 20ms between repeats
+    repeat_delay = 200  # 200ms delay before repeat starts
+
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -303,6 +308,42 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
+# Enter layout mode with Alt+Shift+semicolon
+bind = $mainMod SHIFT, semicolon, submap, layout
+
+# Layout submap (edit mode)
+submap = layout
+
+# Layout options
+bind = , a, exec, hyprctl keyword general:layout dwindle
+bind = , a, submap, reset
+
+bind = , s, exec, hyprctl keyword general:layout master
+bind = , s, submap, reset
+
+bind = , g, togglefloating  # Changed to g for floating (like Pop Shell)
+bind = , g, submap, reset
+
+bind = , f, fullscreen, 1
+bind = , f, submap, reset
+
+bind = , d, togglegroup  # Moved grouping to d
+bind = , d, submap, reset
+
+# Additional useful bindings in layout mode
+bind = , t, pseudo  # Toggle pseudo-tile
+bind = , t, submap, reset
+
+bind = , m, fullscreen, 0  # Maximize
+bind = , m, submap, reset
+
+# Exit layout mode with escape or enter
+bind = , escape, submap, reset
+bind = , return, submap, reset
+
+# Reset to normal mode
+submap = reset
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -330,10 +371,10 @@ workspace = 1, monitor:HDMI-A-2
 workspace = 4, monitor:HDMI-A-2
 workspace = 7, monitor:HDMI-A-2
 
-workspace = 2, monitor:DP-2
-workspace = 5, monitor:DP-2
-workspace = 8, monitor:DP-2
+workspace = 2, monitor:DP-1
+workspace = 5, monitor:DP-1
+workspace = 8, monitor:DP-1
 
-workspace = 3, monitor:DP-1
-workspace = 6, monitor:DP-1
-workspace = 9, monitor:DP-1
+workspace = 3, monitor:DP-2
+workspace = 6, monitor:DP-2
+workspace = 9, monitor:DP-2
