Edited the hyprland config because I was getting some mouse acceleration

--- a/other_configs/hyprland/hypr/hyprland.conf
+++ b/other_configs/hyprland/hypr/hyprland.conf
@@ -206,6 +206,9 @@ input {
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
+    # Disable mouse acceleration. It's meant to default to off, but it's deffo on...
+    accel_profile = flat
+
     touchpad {
         natural_scroll = false
     }
@@ -378,3 +381,4 @@ workspace = 8, monitor:DP-1
 workspace = 3, monitor:DP-2
 workspace = 6, monitor:DP-2
 workspace = 9, monitor:DP-2
+
