Updated the kitty config to pull a bg image

--- a/other_configs/terminals/kitty.conf
+++ b/other_configs/terminals/kitty.conf
@@ -33,6 +33,9 @@ background #0d1117
 selection_foreground #0d1117
 selection_background #58a6ff
 
+# Set a background image
+background_image ~/Pictures/github_coding_images/OWL.jpg
+
 # Cursor
 cursor #58a6ff
 cursor_text_color background
