Updated the kitty.conf again with the final setting that will make the bg image act how I want it to

--- a/other_configs/terminals/kitty.conf
+++ b/other_configs/terminals/kitty.conf
@@ -34,7 +34,13 @@ selection_foreground #0d1117
 selection_background #58a6ff
 
 # Set a background image
-background_image ~/Pictures/github_coding_images/OWL.jpg
+background_image ~/Pictures/github_coding_images/Owl.png
+
+# Center the image instead of tiling
+background_image_layout scaled
+
+# Add a dark overlay for better text readability
+background_tint 0.9
 
 # Cursor
 cursor #58a6ff
