Made the repo make more sense by moving files around. Also updated the hyprland and wezterm config files to match what I am using currently on the home pc

--- a/other_configs/tiling_window_managers/hyprland/hypr/hyprland.conf
+++ b/other_configs/tiling_window_managers/hyprland/hypr/hyprland.conf
@@ -19,9 +19,10 @@ monitor=,preferred,auto,auto
 # Left monitor (1080p HDMI)
 monitor = HDMI-A-2, 1920x1080, 0x0, 1
 # Middle monitor (4K at 150% scale) - starts after left monitor
-monitor = DP-1, 3840x2160, 1920x0, 1.5
+monitor = DP-1, 1920x1080, 1920x0, 1.0
+# monitor = DP-1, 3840x2160, 1920x0, 1.5
 # Right monitor (1080p DP) - starts after middle monitor's effective width
-monitor = DP-2, 1920x1080, 4480x0, 1
+monitor = DP-2, 1920x1080, 3840x0, 1
 
 
 ###################
@@ -215,9 +216,9 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# gestures {
+#     workspace_swipe = false
+# }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
@@ -364,7 +365,7 @@ windowrule = suppressevent maximize, class:.*
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 # Terminal
-bind = $mainMod, Return, exec, kitty
+bind = $mainMod, Return, exec, wezterm
 
 #App Launcher
 bind = $mainMod, D, exec, wofi --show drun
