Updated the hyprland config and added a simple readme to remind me where the directories go

--- a/other_configs/tiling_window_managers/hyprland/hypr/hyprland.conf
+++ b/other_configs/tiling_window_managers/hyprland/hypr/hyprland.conf
@@ -16,13 +16,17 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
-# Left monitor (1080p HDMI)
-monitor = HDMI-A-2, 1920x1080, 0x0, 1
-# Middle monitor (4K at 150% scale) - starts after left monitor
-monitor = DP-1, 1920x1080, 1920x0, 1.0
+# monitor = HDMI-A-2, 1920x1080, 0x0, 1
 # monitor = DP-1, 3840x2160, 1920x0, 1.5
-# Right monitor (1080p DP) - starts after middle monitor's effective width
-monitor = DP-2, 1920x1080, 3840x0, 1
+# monitor = DP-2, 1920x1080, 4480x0, 1
+
+monitor = HDMI-A-2, 1920x1080, 0x0, 1
+monitor = DP-1, 2560x1440, 1920x0, 1
+monitor = DP-2, 1920x1080, 4480x0, 1
+
+# monitor = HDMI-A-2, 1920x1080, 0x0, 1
+# monitor = DP-1, 1920x1080, 1920x0, 1
+# monitor = DP-2, 1920x1080, 3840x0, 1
 
 
 ###################
