Updated the tmux config file to respect the current working directory rather than starting at wherever tmux was launched from.

--- a/other_configs/tmux/tmux.conf
+++ b/other_configs/tmux/tmux.conf
@@ -108,3 +108,8 @@ bind-key T command-prompt -I "#S" "rename-session '%%'"
 bind-key z resize-pane -Z
 # Add binding to swap current window with target window
 bind-key s command-prompt -p "swap with window:" "swap-window -t '%%'"
+
+# Make tmux respect the current working directoy when opening  new winows or creatiing splits...
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
