Updated the example tmuxinator config to better explain how to create the root directories for windows.

--- a/other_configs/tmuxinator/example.yaml
+++ b/other_configs/tmuxinator/example.yaml
@@ -12,12 +12,12 @@ root: ~/coding
 
 windows:
   - frontend:
-      root: ~/coding
+      root: ~/coding/frontend
       panes:
         - nvim
         
   - backend:
-      root: ~/coding
+      root: ~/coding/backend
       panes:
         - nvim
         
